# msg-auth-status

./: Cargo.toml  README.md
.github/workflows/: CI.yml
abnf/: rfc8601.abnf
benches/: bencher.rs
examples/: conversion_auth_results.rs  conversion_dkim.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: addr.rs  alloc_no.rs  alloc_yes.rs  auth.rs  auth_results.rs  dkim.rs  error.rs  iprev.rs  lib.rs  parser.rs  spf.rs  traits.rs  types.rs
src/alloc_yes/: auth_results.rs  dkim_signatures.rs  verifier.rs
src/auth/: ptypes.rs
src/dkim/: algorithm.rs  canonicalization.rs  header.rs  ptypes.rs  signature.rs  timestamp.rs  version.rs
src/iprev/: ptypes.rs
src/parser/: addr_spec.rs  auth_results.rs  comment.rs  dkim_signature.rs  quoted.rs
src/snapshots/: msg_auth_status__test__from_mail_parser-2.snap.new  msg_auth_status__test__from_mail_parser-3.snap.new  msg_auth_status__test__from_mail_parser.snap.new  msg_auth_status__test__from_rfc822-5.snap.new  msg_auth_status__test__from_rfc822-7.snap.new  msg_auth_status__test__rfc8601_sect_b-7.snap.new
src/spf/: ptypes.rs
src/types/: auth.rs  dkim.rs
test_data/: dkim_policy_ptype.txt  fail_to_in_areweat.eml  from_arewe_at_to_gmail.eml  from_gmail_to_arewe_at.eml  rfc6376_a2_signed.txt  rfc6376_a3_verified.eml  rfc8601_b1_field_not_present.txt  rfc8601_b2_no_auth_done.txt  rfc8601_b3_auth_done.eml  rfc8601_b4_several_done_single_mta.eml  rfc8601_b5_several_done_diff_mtas.txt  rfc8601_b6_multi_tiered_auth.eml  rfc8601_b7_comment_heavy.eml  to_in_areweat.eml  to_in_fastmail.eml  to_in_protonmail.eml
test_data/domainkeys/: 202405e.arewe.at  202405r.arewe.at  brisbane.example.org  fm1.fastmail.com  fm1.messagingengine.com
test_data/fail_to_in_areweat.snap/: msg_auth_status__alloc_yes__auth_results__test__from_mail_parser.snap
test_data/from_arewe_at_to_gmail.snap/: msg_auth_status__alloc_yes__auth_results__test__from_mail_parser.snap  msg_auth_status__alloc_yes__dkim_signatures__test__from_mail_parser.snap
test_data/from_gmail_to_arewe_at.snap/: msg_auth_status__alloc_yes__auth_results__test__from_mail_parser.snap  msg_auth_status__alloc_yes__dkim_signatures__test__from_mail_parser.snap
test_data/rfc6376_a2_signed.snap/: msg_auth_status__alloc_yes__auth_results__test__from_mail_parser.snap  msg_auth_status__test__from_mail_parser.snap  (+1 more)
(+50 files in other folders)
