[package]
name = "msg-auth-status"
version = "0.1.0"
edition = "2021"

[dependencies]
mail-parser = { version = "0.9", default-features = false, optional = true }
logos = { version = "0.14", default-features = false, features = ["export_derive"] }
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }

[dev-dependencies]
insta = { version = "1.38" }
rstest = { version = "0.19" }

[features]
default = ["mail_parser", "alloc", "std"]
std = []
alloc = []
mail_parser = ["dep:mail-parser"]
