[package]
name = "msg-auth-status"
version = "0.1.0"
edition = "2021"

[dependencies]
mail-parser = { version = "0.9", default-features = false, optional = true }
logos = { version = "0.14", default-features = false, features = ["export_derive"] }

[dev-dependencies]
insta = { version = "1.38" }
rstest = { version = "0.19" }
criterion = { version = "0.5" }

[[bench]]
name = "bencher"
harness = false

[features]
default = ["alloc", "mail_parser", "static", "std"]
std = []
alloc = []
mail_parser = ["dep:mail-parser"]
static = []
