[package]
name = "msg-auth-status"
version = "0.2.0"
edition = "2021"
description = "Parser & Verifier for Message Authentication Status - DKIM-Signature and Authentication-Results"
homepage = "https://github.com/areweat/msg-auth-status"
keywords = ["mail", "dkim", "authentication", "parser"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/areweat/msg-auth-status"
categories = ["science"]

[dependencies]
mail-parser = { version = "0.9", default-features = false, optional = true }
logos = { version = "0.14", default-features = false, features = ["export_derive"] }

[dev-dependencies]
insta = { version = "1.38" }
rstest = { version = "0.19" }
criterion = { version = "0.5" }

[[bench]]
name = "bencher"
required-features = ["mail_parser"]
harness = false

[[example]]
name = "conversion_dkim"
required-features = ["mail_parser"]
harness = false

[[example]]
name = "conversion_auth_results"
required-features = ["mail_parser", "alloc"]
harness = false

[features]
default = ["alloc", "mail_parser", "static", "std"]
std = []
alloc = []
mail_parser = ["dep:mail-parser"]
static = []
verifier = []
